fix header z-index

--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -9,6 +9,7 @@
     height: 36px;
     left: 0%;
     top: 0px;
+    z-index: 1;
     background: #FFFFFF;
     box-shadow: 0px 3px 50px -1px rgba(50, 50, 71, 0.05);
 }
